[project]
name = "admin-panel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.14",
    "asyncio>=3.4.3",
    "isort>=6.0.1",
    "litestar[standard]>=2.15.1",
    "pydantic>=2.10.6",
    "ruff>=0.11.2",
]
