[project]
name = "admin-panel-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "asyncio>=3.4.3",
    "fastapi[all]>=0.115.12",
    "python-jose>=3.4.0",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"